--- a/angular-ocr/package.json
+++ b/angular-ocr/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
+    "multer": "^1.4.3",
     "ng2-pdf-viewer": "^7.0.1",
     "ngx-avatar": "^4.1.0",
     "postcss": "^8.3.7",
