--- a/angular-ocr/package.json
+++ b/angular-ocr/package.json
@@ -29,14 +29,18 @@
     "@tailwindcss/typography": "^0.4.1",
     "ajv": "^6.9.1",
     "autoprefixer": "^10.0.2",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
+    "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
-    "ng2-pdf-viewer": "^7.0.1",
     "ngx-avatar": "^4.1.0",
+    "path": "^0.12.7",
     "postcss": "^8.3.7",
     "rxjs": "^6.6.7",
     "tailwindcss": "^2.2.15",
