--- a/angular-ocr/package.json
+++ b/angular-ocr/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --host 0.0.0.0 --port 3000",
-    "build": "NODE_ENV=production ng build --prod",
+    "build": "NODE_ENV=production ng build --prod --output-path=/apps/layout",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
