--- a/angular-ocr/package.json
+++ b/angular-ocr/package.json
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "bson-objectid": "^2.0.1",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
@@ -62,8 +63,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "nodemon": "^2.0.13",
+    "prettier": "^2.4.1",
     "tailwindcss-debug-screens": "^2.1.0",
-    "typescript": "~4.3.5",
-    "prettier": "^2.4.1"
+    "typescript": "~4.3.5"
   }
 }
