--- a/angular-ocr/package.json
+++ b/angular-ocr/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^12.2.7",
     "@angular/platform-browser-dynamic": "^12.2.7",
     "@angular/router": "^12.2.7",
+    "@ngrx/store": "^12.5.0",
     "@ngx-translate/core": "^13.0.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
