--- a/angular-ocr/package.json
+++ b/angular-ocr/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.3",
     "@angular/animations": "^12.2.7",
     "@angular/cdk": "^12.2.7",
     "@angular/common": "^12.2.7",
@@ -23,6 +24,9 @@
     "@angular/platform-browser": "^12.2.7",
     "@angular/platform-browser-dynamic": "^12.2.7",
     "@angular/router": "^12.2.7",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ngrx/store": "^12.5.0",
     "@ngx-translate/core": "^13.0.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
@@ -41,7 +45,9 @@
     "mongoose": "^6.0.8",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
+    "ng2-nouislider": "^1.8.3",
     "ngx-avatar": "^4.1.0",
+    "nouislider": "^15.5.0",
     "path": "^0.12.7",
     "postcss": "^8.3.7",
     "rxjs": "^6.6.7",
