--- a/angular-search/package.json
+++ b/angular-search/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.0",
     "bootstrap": "^4.5.0",
     "lodash": "^4.17.21",
+    "ngx-pagination": "^5.1.1",
     "postcss": "^8.3.11",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
