--- a/angular-search/package.json
+++ b/angular-search/package.json
@@ -26,10 +26,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@types/uuid": "^8.3.1",
+    "angular2-chartjs": "^0.5.1",
     "autoprefixer": "^10.4.0",
     "bootstrap": "^4.5.0",
     "lodash": "^4.17.21",
     "ngx-pagination": "^5.1.1",
+    "ngx-spinner": "^12.0.0",
     "postcss": "^8.3.11",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
