--- a/angular-search/package.json
+++ b/angular-search/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "^10.4.0",
     "bootstrap": "^4.5.0",
     "lodash": "^4.17.21",
+    "ngx-dropzone": "^3.0.0",
     "ngx-pagination": "^5.1.1",
     "ngx-spinner": "^12.0.0",
     "postcss": "^8.3.11",
