--- a/angular-search/package.json
+++ b/angular-search/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^10.0.0",
     "@types/uuid": "^8.3.1",
     "angular2-chartjs": "^0.5.1",
     "autoprefixer": "^10.4.0",
@@ -35,6 +36,7 @@
     "ngx-spinner": "^12.0.0",
     "postcss": "^8.3.11",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.2.2",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
