--- a/angular-search/package.json
+++ b/angular-search/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "set NODE_OPTIONS=--max_old_space_size=8192 & ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -31,6 +31,7 @@
     "autoprefixer": "^10.4.0",
     "bootstrap": "^4.5.0",
     "lodash": "^4.17.21",
+    "ngx-cookie-service": "^12.0.3",
     "ngx-dropzone": "^3.0.0",
     "ngx-pagination": "^5.1.1",
     "ngx-spinner": "^12.0.0",
