--- a/angular-search/package.json
+++ b/angular-search/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "ngx-cookie-service": "^12.0.3",
     "ngx-dropzone": "^3.0.0",
+    "ngx-extended-pdf-viewer": "^11.2.0-alpha.3",
     "ngx-pagination": "^5.1.1",
     "ngx-spinner": "^12.0.0",
     "postcss": "^8.3.11",
