--- a/vue-search/package.json
+++ b/vue-search/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.0.4",
+    "vue-pdf-app": "^2.1.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
