--- a/vue-search/package.json
+++ b/vue-search/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "apexcharts": "^3.35.0",
     "bootstrap": "4.5.0",
     "chart.js": "^3.7.1",
     "core-js": "^3.19.3",
     "element-ui": "^2.15.6",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-chartjs": "^4.0.4",
+    "vue-doc-preview": "^0.3.2",
     "vue-pdf-app": "^2.1.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
