--- a/vue-search/package.json
+++ b/vue-search/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.7.1",
     "core-js": "^3.19.3",
     "element-ui": "^2.15.6",
+    "jquery": "^3.6.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
